# signate-deploy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  update-docs.yml
scripts/: gen_commands_doc.py
src/signate_deploy/: __init__.py  __main__.py  cli.py  signate_cli.py
src/signate_deploy/commands/: competition_list.py  download.py  file_list.py  init.py  init_repo.py  setup_token.py  submit.py  task_list.py
tests/: test_init.py  test_init_repo.py  test_setup_token.py
