[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signate-deploy"
version = "0.1.1"
description = "A CLI tool to automate SIGNATE competition workflows via GitHub Actions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "yasunorim" },
]
keywords = ["signate", "deploy", "github-actions", "machine-learning", "competition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
signate-deploy = "signate_deploy.cli:main"

[project.urls]
Homepage = "https://github.com/yasumorishima/signate-deploy"
Repository = "https://github.com/yasumorishima/signate-deploy"

[tool.hatch.build.targets.wheel]
packages = ["src/signate_deploy"]
